src/objects/MMD_Consultant_Profile__c.object
<CustomObject>
    <description>(MBI) - MMD - Consultants - Types of Fees Collected and the Firm&apos;s Market Focus</description>
    <fields>
        <fullName>ATH1ASSETS__c</fullName>
        <label>Other Clients 1 - Assets Placed</label>
        <precision>13</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CORP100PLUS__c</fullName>
        <label>Corporations &gt;$100mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CORP100__c</fullName>
        <label>Corporations $50-100mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CORP50__c</fullName>
        <label>Corporations $10-50mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CORPASSETS__c</fullName>
        <label>Corporations - Assets Placed</label>
        <precision>13</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CORPLESS10__c</fullName>
        <label>Corporations &lt;$10mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_DESC__c</fullName>
        <label>DB Plan Specs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DC_DESC__c</fullName>
        <label>DC Plan Specs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DESCOTHER1__c</fullName>
        <label>Other Clients 1 Desc</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DESCOTHER2__c</fullName>
        <label>Other Clients 2 Desc</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENDOW100PLUS__c</fullName>
        <label>Endowments &gt;$100mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ENDOW100__c</fullName>
        <label>Endowments $50-100mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ENDOW50__c</fullName>
        <label>Endowments $10-50mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ENDOWASSETS__c</fullName>
        <label>Endowments - Assets Placed</label>
        <precision>13</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ENDOWLESS10__c</fullName>
        <label>Endowments &lt;$10mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ENDOW_DESC__c</fullName>
        <label>Endowment Specs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FAMILY_DESC__c</fullName>
        <label>Family Office/Trust Specs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FINST100PLUS__c</fullName>
        <label>Financial Institutions &gt;$100mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FINST100__c</fullName>
        <label>Financial Institutions $50-100mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FINST10__c</fullName>
        <label>Financial Institutions &lt;$10mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FINST50__c</fullName>
        <label>Financial Institutions $10-50mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FINSTASSETS__c</fullName>
        <label>Financial Institutions - Assets Placed</label>
        <precision>13</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FIN_DESC__c</fullName>
        <label>Financial Institution Specs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FOUND100PLUS__c</fullName>
        <label>Foundations &gt;$100mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FOUND100__c</fullName>
        <label>Foundations $50-100mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FOUND50__c</fullName>
        <label>Foundations $10-50mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FOUNDASSETS__c</fullName>
        <label>Foundations - Assets Placed</label>
        <precision>13</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FOUNDLESS10__c</fullName>
        <label>Foundations &lt;$10mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FOUND_DESC__c</fullName>
        <label>Foundation Specs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FROMMGR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From any Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Firm_Name__c</fullName>
        <formula>$Organization.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Firm Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GOV100PLUS__c</fullName>
        <label>Governments &gt;$100mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GOV100__c</fullName>
        <label>Governments $50-100mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GOV50__c</fullName>
        <label>Governments $10-50mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GOVASSETS__c</fullName>
        <label>Governments - Assets Placed</label>
        <precision>13</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GOVLESS10__c</fullName>
        <label>Governments &lt;$10mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GOV_DESC__c</fullName>
        <label>Gov&apos;t Plan Specs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HARDDOLLAR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hard-Dollar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HOSP100PLUS__c</fullName>
        <label>Hospitals &gt;$100mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HOSP100__c</fullName>
        <label>Hospitals $50-100mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HOSP50__c</fullName>
        <label>Hospitals $10-50mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HOSPASSETS__c</fullName>
        <label>Hospitals - Assets Placed</label>
        <precision>13</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HOSPLESS10__c</fullName>
        <label>Hospitals &lt;$10mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HOSP_DESC__c</fullName>
        <label>Hospital Specs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <externalId>true</externalId>
        <label>Firm MMD ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INDV100PLUS__c</fullName>
        <label>Individuals &gt;$100mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INDV100__c</fullName>
        <label>Individuals $50-100mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INDV50__c</fullName>
        <label>Individuals $10-50mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INDVASSETS__c</fullName>
        <label>Individuals - Assets Placed</label>
        <precision>13</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INDVLESS10__c</fullName>
        <label>Individuals &lt;$10mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INDV_DESC__c</fullName>
        <label>Individual Specifications</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>INVESTPROD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For Investment Products (includes Wrap)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MKT_DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate DB Plans</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MKT_DC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate DC Plans</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MKT_ENDOW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Endowments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MKT_FAMILY__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Family Offices/Trusts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MKT_FIN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financial Institutions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MKT_FOUND__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Foundations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MKT_GOV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Government Plans</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MKT_HOSP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hospitals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MKT_INDV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Individuals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MKT_UNION__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Union Plans</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MMD_Firm_Profile__c</fullName>
        <label>MMD Firm Profile</label>
        <referenceTo>MMCOMP__c</referenceTo>
        <relationshipLabel>Consultant Profile</relationshipLabel>
        <relationshipName>MMD_Consultant_Profiles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NPROF100PLUS__c</fullName>
        <label>Not for Profits &gt;$100mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPROF100__c</fullName>
        <label>Not for Profits $50-100mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPROF10__c</fullName>
        <label>Not for Profits &lt;$10mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPROF50__c</fullName>
        <label>Not for Profits $10-50mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPROFASSETS__c</fullName>
        <label>Not for Profits - Assets Placed</label>
        <precision>13</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OTH1100PLUS__c</fullName>
        <label>Other Clients 1 &gt;$100mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OTH1100__c</fullName>
        <label>Other Clients 1 $50-100mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OTH150__c</fullName>
        <label>Other Clients 1 $10-50mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OTH1LESS10__c</fullName>
        <label>Other Clients 1 &lt;$10mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OTH1_DC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Market Focus 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OTH1_DESC__c</fullName>
        <label>Other Focus 1 Specs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OTH1_TEXT__c</fullName>
        <label>Other Focus 1 Description</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTH2100PLUS__c</fullName>
        <label>Other Clients 2 &gt;$100mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OTH2100__c</fullName>
        <label>Other Clients 2 $50-100mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OTH2ASSETS__c</fullName>
        <label>Other Clients 2 - Assets Placed</label>
        <precision>13</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OTH2LESS10__c</fullName>
        <label>Other Clients 2 &lt;$10mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OTH2_DC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Market Focus 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OTH2_DESC__c</fullName>
        <label>Other Focus 2 Specs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OTH2_TEXT__c</fullName>
        <label>Other Focus 2 Description</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PERFORMINC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performance Incentive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PROJBASIS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Basis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RETAINBASIS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retainer Basis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SOFTDOLLAR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Soft-Dollar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SOFTSALE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sale of Software/Research Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNION100PLUS__c</fullName>
        <label>Unions &gt;$100mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNION100__c</fullName>
        <label>Unions $50-100mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNION50__c</fullName>
        <label>Unions $10-50mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNIONASSETS__c</fullName>
        <label>Unions - Assets Placed</label>
        <precision>13</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNIONLESS10__c</fullName>
        <label>Unions &lt;$10mil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNION_DESC__c</fullName>
        <label>Union Plan Specs</label>
        <type>TextArea</type>
    </fields>
    <label>MMD Consultant Profile</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Link</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MMD Consultant Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>